--- a/index.html
+++ b/index.html
@@ -62,15 +62,24 @@
           <div class="">
             <ul class="list-unstyled d-flex flex-column color-two justify-content-between align-items-center">
               <li class="fs-3">
-                Katzen 
+                <a class="manu-item" href="#"> 
+
+
+                  Katzen 
+                </a>
                 </li>
-              <li class="fs-3 my-4">Hunde</li>
-              <li class="fs-3 my-4">Zubehor</li>
-              <li class="fs-3 my-4">
-                Uber uns
+              <li class="fs-3 my-2"> <a class="manu-item" href="#">Hunde</a></li>
+              <li class="fs-3 my-2"> <a class="manu-item" href="#">
+                Zubehor
+              </a></li>
+              <li class="fs-3 my-2">
+                <a class="manu-item" href="#">
+
+                  Uber uns
+                </a>
                </li>
-              <li class="fs-3 my-4">Info</li>
-              <li class="fs-3 my-4">Tagebuch</li>
+              <li class="fs-3 my-2"> <a class="manu-item" href="#">Info</a></li>
+              <li class="fs-3 my-2"> <a class="manu-item" href="#">Tagebuch</a></li>
             </ul>
           </div>
         </section>
@@ -86,15 +95,26 @@
   <div class="px-5">
     <ul class="list-unstyled d-flex color-two justify-content-start">
       <li class="fs-3">
-        Katzen 
+        <a  class="manu-item" href="#">
+
+          Katzen 
+        </a>
         </li>
-      <li class="fs-3 mx-4">Hunde</li>
-      <li class="fs-3 mx-4">Zubehor</li>
+      <li class="fs-3 mx-4"> <a  class="manu-item" href="#"> Hunde</a> </li>
+      <li class="fs-3 mx-4"> <a class="manu-item" href="#">
+
+        Zubehor
+      </a>
+    </li>
       <li class="fs-3 mx-4">
-        Uber uns
+        <a class="manu-item" href="#">
+
+
+          Uber uns
+        </a>
        </li>
-      <li class="fs-3 mx-4">Info</li>
-      <li class="fs-3 mx-4">Tagebuch</li>
+      <li class="fs-3 mx-4"> <a class="manu-item" href="#">Info</a></li>
+      <li class="fs-3 mx-4"> <a class="manu-item" href="#">Tagebuch</a></li>
     </ul>
   </div>
 </section>
@@ -402,7 +422,7 @@ unseren zwei Norwegern liebend gern gefressen
 <!-- checkbox section  -->
 <section class="bg-one px-2 px-md-5 py-5">
  <div class="w-75 mx-auto text-center" >
-    <h1 class="color-white py-2 fs-1 fw-bolder">Werde Teil Der MjAMjAm- <br> Familie</h1>
+    <h1 class="color-white  py-2 fs-1 fw-bolder">Werde Teil Der MjAMjAm- <br> Familie</h1>
      <h4 class="color-white py-2 fs-3">Beleibe immer aufdem Laufenden und verpasse keine Aktion Mehr. <br> Abonniere unseren Kostenlosen Newsleter</h4>
      <div class="d-flex  justify-content-center align-items-center text-center my-3">
         <input class="me-3 py-2 border-0 rounded-3 bg-four px-2 " placeholder="Deine E-mail-Adresse" type="text">
